k8s/todo-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  namespace: todo
  labels:
    app: todo-api
spec:
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - name: todo-api
          image: kevinpena/todo-api:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4300
              protocol: TCP
