k8s/todo-front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-front
  namespace: todo
  labels:
    app: todo-front
spec:
  selector:
    matchLabels:
      app: todo-front
  template:
    metadata:
      labels:
        app: todo-front
    spec:
      containers:
        - name: todo-front
          image: kevinpena/todo-front:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
