k8s/todo-pg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-pg
  labels:
    app: todo-pg
spec:
  selector:
    matchLabels:
      app: todo-pg
  template:
    metadata:
      labels:
        app: todo-pg
    spec:
      containers:
        - name: todo-pg
          image: postgres:13.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: pg
              containerPort: 5432
              protocol: TCP
