k8s/todo-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: todo
  labels:
    app: todo-api
spec:
  selector:
    app: todo-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
