k8s/todo-front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-front
  labels:
    app: todo-front
spec:
  selector:
    app: todo-front
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
