k8s/todo-pg-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-pg
  namespace: todo
  labels:
    app: todo-pg
spec:
  selector:
    app: todo-pg
  ports:
    - name: pg
      port: 5432
      targetPort: pg
      protocol: TCP
